# RustyConnect4

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
src/: cli.rs  components.rs  constant.rs  lib.rs  main.rs  state.rs
src/components/: app.rs  burgermenu.rs  connect4board.rs  connect4rules.rs  home.rs  tootandottoboard.rs  winner_modal.rs
styles/: globals.css
www/: index.js  package-lock.json  package.json
