[package]
name = "rusty-connect4-tmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = "0.3.69"
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo-console = "0.3.0"
rand = "0.8.5"
